# fauxx-desktop

./: .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY.md  deny.toml  device_interop_vector.json  dist-workspace.toml  renovate.json  rust-toolchain.toml
.github/DISCUSSION_TEMPLATE/: ideas.yml  threat-models-and-privacy-theory.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  crash_report.yml  feature_request.yml  other.md
.github/workflows/: ci.yml  comment-triggered-labels.yml  issue-labeler.yml  linux-packaging.yml  release.yml  reproducibility.yml  workflow-lint.yml
apps/cli/: Cargo.toml
apps/cli/src/: cli.rs  main.rs
apps/cli/src/commands/: ab.rs  alias.rs  anchor.rs  broker.rs  campaign.rs  dns.rs  drift.rs  dsar.rs  egress.rs  export.rs  generate.rs  gpc.rs  logs.rs  mint.rs  mod.rs  mode.rs  native_host.rs  pack.rs  pair.rs  peers.rs  persona.rs  run.rs  schedule.rs  search.rs  serve.rs  serve_config.rs  status.rs
apps/cli/tests/: cross_device.rs  deterministic_defense.rs  measurement_compute.rs  orchestration.rs  persona_lifecycle.rs  studio_network.rs
apps/cli/tests/common/: mod.rs
apps/desktop/: Cargo.toml
apps/desktop/src/: bg.rs  firstrun.rs  main.rs  message.rs  prefs.rs  state.rs  style.rs  update.rs  view.rs
apps/desktop/src/tray/: linux.rs  mod.rs  other.rs
apps/desktop/src/views/: brokers.rs  campaigns.rs  charts.rs  dashboard.rs  devices.rs  error.rs  faq.rs  loading.rs  mod.rs  network.rs  privacy.rs  running.rs  settings.rs  studio.rs  wizard.rs
ci/: check-invariants.sh
crates/fauxx-core/: Cargo.toml
crates/fauxx-core/docs/: C3_DEFENSE.md  C4_MEASUREMENT.md  C5_PERSONA_STUDIO.md  C6_GENERATE.md  C6_MINT.md  C7_NETWORK.md  C8_ORCHESTRATION.md  persona-packs.md
crates/fauxx-core/src/: constants.rs  error.rs  lib.rs  persona.rs  ui.rs
crates/fauxx-core/src/aliases/: mod.rs
crates/fauxx-core/src/anchors/: mod.rs
crates/fauxx-core/src/brokers/: brokers.json  mod.rs  registry.rs  scan.rs  submission.rs
crates/fauxx-core/src/browser/: cadence.rs  categories.rs  category_sites.json  device.rs  gpc.rs  isolation.rs  mod.rs  search.rs  topics.rs
crates/fauxx-core/src/campaigns/: metric.rs  mod.rs  planner.rs
crates/fauxx-core/src/dsar/: letter.rs  mod.rs
crates/fauxx-core/src/generate/: allocator.rs  mod.rs  plan.rs
crates/fauxx-core/src/idle/: detect.rs  mod.rs  planner.rs
crates/fauxx-core/src/logging/: mod.rs
crates/fauxx-core/src/measurement/: distribution.rs  export.rs  mod.rs  platform.rs  shadow.rs  stats.rs
crates/fauxx-core/src/mint/: mod.rs  persona_distribution.json
crates/fauxx-core/src/mqtt/: command.rs  discovery.rs  mod.rs  real.rs
crates/fauxx-core/src/network/: mod.rs
crates/fauxx-core/src/orchestration/: mod.rs  mode.rs  scheduler.rs  wan_ip.rs
crates/fauxx-core/src/personapack/: mod.rs
crates/fauxx-core/src/querybank/: blocklist.rs  markov.rs  mod.rs  query_banks_en.json  refinements.rs
crates/fauxx-core/src/store/: keystore.rs  mod.rs  schema.rs
crates/fauxx-core/src/studio/: category_cooccurrence.json  linter.rs  mod.rs  settings.rs  simulator.rs
crates/fauxx-core/src/subsystems/: browser.rs  measurement.rs  mod.rs  scheduler.rs  sync.rs
crates/fauxx-core/src/sync/: crypto.rs  discovery.rs  mod.rs  peer.rs  qr.rs  tcp.rs  transport.rs  wire.rs
crates/fauxx-core/tests/: device_identity.rs  lan_sync_tcp.rs  live_browser.rs  live_gpc.rs  network_egress.rs  orchestration_core.rs  property.rs
deploy/: Dockerfile  docker-compose.yml  fauxx.service  serve.example.json
extension/: .gitignore  PROTOCOL.md  README.md  eslint.config.js  manifest.json  package-lock.json  package.json
extension/native-host/: README.md  com.digital_grease.fauxx.chromium.json.template  com.digital_grease.fauxx.firefox.json.template  com.digital_grease.fauxx.json.template  fauxx-native-host.sh  sample-exchange.json
extension/popup/: popup.css  popup.html  popup.js
extension/src/: background.js  category_sites.js  decoy.js  gpc_rules.json  guardrails.js  protocol.js
extension/test/: guardrails.test.js  protocol.test.js
fuzz/: Cargo.toml
fuzz/fuzz_targets/: blocklist.rs  scrubber.rs  sync_frame.rs
packaging/linux/: README.md  net.digitalgrease.FauxxDesktop.desktop  net.digitalgrease.FauxxDesktop.metainfo.xml
scripts/: vendor-cooccurrence.py  vendor-query-data.py
